// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component should be able to add custom classes 1`] = `
<div
  className="undefined customContainer"
  style={
    Object {
      "color": "#000",
    }
  }
>
  <div
    className="undefined custom"
  >
    Loading...
  </div>
</div>
`;

exports[`Spinner component should be able to change the default color 1`] = `
<div
  className="undefined undefined"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="undefined undefined"
  >
    Loading...
  </div>
</div>
`;

exports[`Spinner component should render correctly 1`] = `
<div
  className="undefined undefined"
  style={
    Object {
      "color": "#000",
    }
  }
>
  <div
    className="undefined undefined"
  >
    Loading...
  </div>
</div>
`;
